--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
         <i class="fas fa-lock"></i>
         <input type="password" placeholder="Password" />
       </div>
-
+      <div>
+        <input type="checkbox" name="checkbox" id="checkbox" />
+        <label for="checkbox">Remember me</label>
+      </div>
       <input type="button" class="btn" value="Sign in" />
     </div>
   </body>
